--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -79,50 +77,13 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center justify-content-center">
     <div class="container position-relative">
-      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="1000">
-        <ol class="carousel-indicators">
-          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
-          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
-          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" style="border-radius: 20px; filter: brightness(60%);">
-          <div class="carousel-item active">
-            <img src="./assets/img/silder/WhatsApp Image 2023-04-11 at 10.58.25 AM.jpeg" class="d-block w-100"
-              alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <!-- <h5>Image 1</h5>
-          <p>This is a stock image.</p> -->
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./assets/img/silder/WhatsApp Image 2023-04-11 at 11.05.33 AM.jpeg" class="d-block w-100"
-              alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <!-- <h5>Image 2</h5>
-          <p>This is another stock image.</p> -->
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./assets/img/silder/WhatsApp Image 2023-04-11 at 10.58.25 AM.jpeg" class="d-block w-100"
-              alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <!-- <h5>Image 3</h5>
-          <p>This is a third stock image.</p> -->
-            </div>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
+      <h1>Welcome to Bloxwich</h1>
+      <h1>
+        <a href="" class="typewrite" data-period="2000" data-type='[ "Elevate your hardware game with Bloxwichs innovative solutions."]'>
+          <span class="wrap"></span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </a>
-      </div>
-      <!-- <h1>Welcome to Bloxwich</h1> -->
-      <!-- <h2>We are team of talented designers making websites with Bootstrap</h2> -->
-      <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
+      </h1>
+      <a href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section>
 
@@ -1059,6 +1020,64 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
+  <script>
+    var TxtType = function(el, toRotate, period) {
+        this.toRotate = toRotate;
+        this.el = el;
+        this.loopNum = 0;
+        this.period = parseInt(period, 10) || 2000;
+        this.txt = '';
+        this.tick();
+        this.isDeleting = false;
+    };
+
+    TxtType.prototype.tick = function() {
+        var i = this.loopNum % this.toRotate.length;
+        var fullTxt = this.toRotate[i];
+
+        if (this.isDeleting) {
+        this.txt = fullTxt.substring(0, this.txt.length - 1);
+        } else {
+        this.txt = fullTxt.substring(0, this.txt.length + 1);
+        }
+
+        this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
+
+        var that = this;
+        var delta = 200 - Math.random() * 100;
+
+        if (this.isDeleting) { delta /= 2; }
+
+        if (!this.isDeleting && this.txt === fullTxt) {
+        delta = this.period;
+        this.isDeleting = true;
+        } else if (this.isDeleting && this.txt === '') {
+        this.isDeleting = false;
+        this.loopNum++;
+        delta = 500;
+        }
+
+        setTimeout(function() {
+        that.tick();
+        }, delta);
+    };
+
+    window.onload = function() {
+        var elements = document.getElementsByClassName('typewrite');
+        for (var i=0; i<elements.length; i++) {
+            var toRotate = elements[i].getAttribute('data-type');
+            var period = elements[i].getAttribute('data-period');
+            if (toRotate) {
+              new TxtType(elements[i], JSON.parse(toRotate), period);
+            }
+        }
+        // INJECT CSS
+        var css = document.createElement("style");
+        css.type = "text/css";
+        css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
+        document.body.appendChild(css);
+    };
+  </script>
   <script src="assets/js/main.js"></script>
 
 </body>
