grayscale filter removed

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="container position-relative">
       <h1>Welcome to Bloxwich</h1>
       <h1>
-        <a href="" class="typewrite" data-period="2000" data-type='[ "Elevate your hardware game with Bloxwichs innovative solutions."]'>
+        <a href="" class="typewrite" data-period="2000" data-type='[ "Elevate Your Hardware Game with Bloxwich - Your Trusted Partner"]'>
           <span class="wrap"></span>
         </a>
       </h1>
@@ -1074,7 +1074,7 @@
         // INJECT CSS
         var css = document.createElement("style");
         css.type = "text/css";
-        css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
+        css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff; font-size: 35px;}";
         document.body.appendChild(css);
     };
   </script>
