--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@
               <div class="icon">
                 <i class="bx bxl-dribbble"></i>
               </div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <h4><a href="">Custom Air Handling Unit Design</a></h4>
+              <p>We offer customized air handling units designed to meet your specific needs. Our units are engineered to provide maximum efficiency and durability</p>
             </div>
           </div>
 
@@ -307,8 +307,8 @@
               <div class="icon">
                 <i class="bx bx-file"></i>
               </div>
-              <h4><a href="">Sed Perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <h4><a href="">Energy-Saving Devices</a></h4>
+              <p>We offer energy-saving devices to help you reduce your energy costs and environmental footprint. Our experts can install and maintain these devices to ensure optimal performance.</p>
             </div>
           </div>
 
@@ -318,8 +318,8 @@
               <div class="icon">
                 <i class="bx bx-tachometer"></i>
               </div>
-              <h4><a href="">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <h4><a href="">Air Filters</a></h4>
+              <p>We offer a range of air filters to meet your filtration needs. Our filters are designed to remove impurities and improve air quality, providing a healthier and more comfortable environment</p>
             </div>
           </div>
 
@@ -328,8 +328,8 @@
               <div class="icon">
                 <i class="bx bx-layer"></i>
               </div>
-              <h4><a href="">Nemo Enim</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <h4><a href="">Ventilation Systems</a></h4>
+              <p>We offer customized ventilation systems designed to meet your specific needs. Our systems are engineered to provide optimal air flow and filtration, promoting a healthy and comfortable environment.</p>
             </div>
           </div>
 
@@ -338,8 +338,8 @@
               <div class="icon">
                 <i class="bx bx-slideshow"></i>
               </div>
-              <h4><a href="">Dele Cardo</a></h4>
-              <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+              <h4><a href="">Maintenance and Repair</a></h4>
+              <p>Our experts can provide regular maintenance and repair services to keep your air handling units and ventilation systems operating at peak performance. We use high-quality parts and ensure timely service.</p>
             </div>
           </div>
 
@@ -348,8 +348,8 @@
               <div class="icon">
                 <i class="bx bx-arch"></i>
               </div>
-              <h4><a href="">Divera Don</a></h4>
-              <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+              <h4><a href="">Consultation</a></h4>
+              <p>Our experts can provide consultation services to help you choose the right hardware solutions for your needs. We can assess your requirements and recommend customized solutions to help you achieve your goals.</p>
             </div>
           </div>
 
@@ -364,9 +364,7 @@
 
         <div class="text-center">
           <h3>Call To Action</h3>
-          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-            laborum.</p>
+          <p>Ready to elevate your hardware game? Contact us today to see how we can help you with customized solutions for air handling units, energy-saving devices, and more.</p>
           <a class="cta-btn" href="#">Call To Action</a>
         </div>
 
