--- a/index.html
+++ b/index.html
@@ -793,24 +793,36 @@
                   <i class="bx bx-map"></i>
                   <h3>Our Address</h3>
                   <p>
-                    Ravet <br>
-                    Pimpri-Chinchwad <br>
-                    Maharashtra 4121101
+                    Mr Rajendra Landge
+A/502, Celestial City, Phase 1, <br>
+Ravet, Pune - 412101 <br>
+Mob: +91-9049000036 <br>
+Email: rajendra.landge.bloxwich@gmail.com
                   </p>
                 </div>
               </div>
               <div class="col-md-6">
-                <div class="info-box mt-4">
-                  <i class="bx bx-envelope"></i>
-                  <h3>Email Us</h3>
-                  <p>bloxwich.technologies@gmail.com<br>rajendra.landge.bloxwich@gmail.com</p>
+                <div class="info-box">
+                  <i class="bx bx-map"></i>
+                  <h3>Registered Office</h3>
+                  <p>
+                    Wisma Rainbow, NO F-52, Ground Floor, <br>
+First Main Road, Anna Nagar East <br>
+Chennai-600102 <br>
+Tamil Nadu
+                  </p>
                 </div>
               </div>
               <div class="col-md-6">
-                <div class="info-box mt-4">
-                  <i class="bx bx-phone-call"></i>
-                  <h3>Call Us</h3>
-                  <p><br>+91 9049000036</p>
+                <div class="info-box">
+                  <i class="bx bx-map"></i>
+                  <h3>Malaysia Office</h3>
+                  <p>
+                    Mr Paulvannan <br>
+No. 235, Block B1, Leisure Commerce Square
+No. 9, Jalan PJS 8/9, 46150 Petaling Jaya <br>
+Selangor Darul Ehsan, Malaysia
+                  </p>
                 </div>
               </div>
             </div>
@@ -818,7 +830,7 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -862,8 +874,13 @@
               Ravet <br>
               Pimpri-Chinchwad <br>
               Maharashtra 4121101 <br><br>
+              <center>India Office </center>
               <strong>Phone:</strong> +91 9049000036<br>
               <strong>Email:</strong> bloxwich.technologies@gmail.com<br>
+              <center>Malaysia Office </center>
+
+              <strong>Phone:</strong> +6012-231 8749 <br>
+              <strong>Email:</strong> paulvannan.bloxwich@gmail.com
             </p>
           </div>
 
@@ -887,13 +904,17 @@
             </ul>
           </div>
 
-          <!-- <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-          </div> -->
+          <div class="col-lg-4 col-md-6 footer-newsletter">
+            <h4>Contact Details</h4>
+            <p>
+              <center> <b>India Office</b> </center>
+              <strong>Phone:</strong> +91 9049000036<br>
+              <strong>Email:</strong> bloxwich.technologies@gmail.com<br>
+
+              <center> <b>Malaysia Office</b> </center>
+              <strong>Phone:</strong> +6012-231 8749 <br>
+              <strong>Email:</strong> paulvannan.bloxwich@gmail.com</p>
+          </div>
 
         </div>
       </div>
