--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
+          <li><a class="nav-link scrollto" href="#clients">Clients</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Products</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <!-- <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li> -->
@@ -79,7 +80,7 @@
     <div class="container position-relative">
       <h1>Welcome to Bloxwich</h1>
       <h1>
-        <a href="" class="typewrite" data-period="2000" data-type='[ "Elevate Your Hardware Game with Bloxwich - Your Trusted Partner"]'>
+        <a href="" class="typewrite" data-period="2000" data-type='[ "Elevate Your Hardware Game with Bloxwich"]'>
           <span class="wrap"></span>
         </a>
       </h1>
@@ -134,51 +135,20 @@
   <!-- End Hero -->
   <main id="main">
 
-    <!-- ======= Clients Section ======= -->
-    <section id="clients" class="clients section-bg">
-      <div class="container">
-
-        <div class="row">
-
-          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
-          </div>
-
-          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-2.png" class="img-fluid" alt="">
-          </div>
-
-          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
-          </div>
-
-          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-4.png" class="img-fluid" alt="">
-          </div>
-
-          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-5.png" class="img-fluid" alt="">
-          </div>
-
-          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-6.png" class="img-fluid" alt="">
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Clients Section -->
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container">
-
-        <div class="row">
+        <div class="section-title">
+          <h2>About</h2>
+          <p>
+            About Us
+          </p>
+        </div>        <div class="row">
           <div class="col-lg-6">
             <img src="assets/img/about.jpg" class="img-fluid" alt="" style="border-radius: 10px;">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
-            <h3>About Us</h3>
             <p>
               Established in
               2010 in MALAYSIA
@@ -510,6 +480,62 @@
     
     <!-- End Portfolio Section -->
 
+    <section id="clients" class="clients section-bg">
+      <div class="container">
+        <div class="section-title">
+          <h2>Clients</h2>
+          <p>
+            Potential Customer          </p>
+        </div>
+        <div class="row">
+
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center morph">
+            <img src="assets/img/potential clients/Advik.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center morph">
+            <img src="assets/img/potential clients/IMG-20230414-WA0008.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center morph">
+            <img src="assets/img/potential clients/IMG_20230416_103016.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center morph">
+            <img src="assets/img/potential clients/Lupin.jpg" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center morph">
+            <img src="assets/img/potential clients/Mahindra.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center morph">
+            <img src="assets/img/potential clients/Parle.png" class="img-fluid" alt="">
+          </div>
+
+          
+
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center morph">
+            <img src="assets/img/potential clients/Pfizer.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center morph">
+            <img src="assets/img/potential clients/Phoenix.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center morph">
+            <img src="assets/img/potential clients/Ruby Hall Clinic.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center morph">
+            <img src="assets/img/potential clients/TCS.png" class="img-fluid" alt="">
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+
     <!-- ======= Team Section ======= -->
     <section id="team" class="team section-bg">
       <div class="container aos-init aos-animate" data-aos="fade-up">
@@ -525,7 +551,7 @@
 
           <div class="col-lg-6 aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="./assets/img/team/avatar.svg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="./assets/img/team/avatar.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Team Member</h4>
                 <span>Chief Executive Officer</span>
@@ -544,7 +570,7 @@
 
           <div class="col-lg-6 mt-4 mt-lg-0 aos-init aos-animate" data-aos="zoom-in" data-aos-delay="200">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="./assets/img/team/avatar.svg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="./assets/img/team/avatar.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Team Member</h4>
                 <span>Product Manager</span>
@@ -561,7 +587,7 @@
 
           <div class="col-lg-6 mt-4 aos-init aos-animate" data-aos="zoom-in" data-aos-delay="300">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="./assets/img/team/avatar.svg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="./assets/img/team/avatar.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Team Member</h4>
                 <span>CMO</span>
@@ -578,7 +604,7 @@
 
           <div class="col-lg-6 mt-4 aos-init aos-animate" data-aos="zoom-in" data-aos-delay="400">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="./assets/img/team/avatar.svg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="./assets/img/team/avatar.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Team Member</h4>
                 <span>
@@ -794,7 +820,7 @@
               <div class="col-md-12">
                 <div class="info-box">
                   <i class="bx bx-map"></i>
-                  <h3>Our Address</h3>
+                  <h3>Regional Office</h3>
                   <p>
                     Mr Rajendra Landge
 A/502, Celestial City, Phase 1, <br>
@@ -874,16 +900,16 @@ Selangor Darul Ehsan, Malaysia
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Bloxwich</h3>
             <p>
-              Ravet <br>
-              Pimpri-Chinchwad <br>
-              Maharashtra 4121101 <br><br>
-              <center>India Office </center>
+              Mr Rajendra Landge A/502, <br> Celestial City, Phase 1, <br>
+              Ravet, Pune - 412101 <br>
+              Mob: +91-9049000036
+              <!-- <center>India Office </center>
               <strong>Phone:</strong> +91 9049000036<br>
               <strong>Email:</strong> bloxwich.technologies@gmail.com<br>
               <center>Malaysia Office </center>
 
               <strong>Phone:</strong> +6012-231 8749 <br>
-              <strong>Email:</strong> paulvannan.bloxwich@gmail.com
+              <strong>Email:</strong> paulvannan.bloxwich@gmail.com -->
             </p>
           </div>
 
