--- a/index.html
+++ b/index.html
@@ -796,9 +796,9 @@ Selangor Darul Ehsan, Malaysia
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Import </a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Export</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="import.html">Product</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="./import.html">Import </a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="./export.html">Export</a></li>
             </ul>
           </div>
 
