--- a/import.html
+++ b/import.html
@@ -36,7 +36,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <h1 class="logo">
-        <img src="./assets/img/Bloxwich Technologies Logo.png" alt="" srcset="">
+        <img src="./assets/img/Bloxwich Technologies Logo.png" alt="" style="height: 100px; width: 100px;"  srcset="">
       </h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
