new changes and corrections

--- a/import.html
+++ b/import.html
@@ -36,7 +36,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <h1 class="logo">
-        <img src="./assets/img/Bloxwich Technologies Logo.png" alt="" style="height: 100px; width: 100px;"  srcset="">
+        <img src="./assets/img/Logo-removebg-preview.png" alt="" style="height: 100px; width: 100px;"  srcset="">
       </h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -72,7 +72,9 @@
 
     <section style="background-color: #eee;">
       <div class="text-center container py-5">
-        <h4 class="mt-4 mb-5"><strong>Imported Products</strong></h4>    
+        <h4 class="mt-4 mb-5"><strong>Imported Products</strong></h4>  
+        <img src="./assets/img/importproductimages/LED Lights B-lite.jpg" class="d-block w-100" alt=""/>
+        <br>
         <div class="row">
           <div class="col-lg-4 col-md-12 mb-4">
             <div class="card">
@@ -179,11 +181,9 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="./index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="./index.html#about">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="./index.html#services">Services</a></li>
             </ul>
           </div>
 
