--- a/export.html
+++ b/export.html
@@ -36,19 +36,14 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <h1 class="logo">
-        <img src="./assets/img/Bloxwich Technologies Logo.png" alt="" style="height: 100px; width: 100px;"  srcset="">
+        <img src="./assets/img/Logo-removebg-preview.png" alt="" style="height: 100px; width: 100px;"  srcset="">
       </h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="#clients">Clients</a></li>
-          <!-- <li><a class="nav-link scrollto " href="#portfolio">Products</a></li> -->
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <li><a class="nav-link scrollto active" href="./index.html">Home</a></li>
           <!-- <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li> -->
           <li class="dropdown"><a href="#portfolio"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -66,7 +61,6 @@
               
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -94,7 +88,7 @@
             <div class="card">
               <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light"
                 data-mdb-ripple-color="light">
-                <img src="./assets/img/reexportsimages/image008.jpg"
+                <img src="./assets/img/reexportsimages/Wiring Harness.jpg"
                   class="w-100" />
                 <a href="#!">
                   <div class="mask">
@@ -195,7 +189,7 @@
             <div class="card">
               <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light"
                 data-mdb-ripple-color="light">
-                <img src="./assets/img/reexportsimages/image016.jpg"
+                <img src="./assets/img/reexportsimages/double torsian springs.jpg"
                   class="w-100" />
                 <a href="#!">
                   <div class="mask">
@@ -221,7 +215,7 @@
             <div class="card">
               <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light"
                 data-mdb-ripple-color="light">
-                <img src="./assets/img/reexportsimages/image018.jpg"
+                <img src="./assets/img/reexportsimages/spiral springs.jpg"
                   class="w-100" />
                 <a href="#!">
                   <div class="mask">
@@ -247,7 +241,7 @@
             <div class="card">
               <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light"
                 data-mdb-ripple-color="light">
-                <img src="./assets/img/reexportsimages/image020.jpg"
+                <img src="./assets/img/reexportsimages/Gaskets.jpeg"
                   class="w-100" />
                 <a href="#!">
                   <div class="mask">
@@ -275,7 +269,7 @@
             <div class="card">
               <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light"
                 data-mdb-ripple-color="light">
-                <img src="./assets/img/reexportsimages/image022.jpg"
+                <img src="./assets/img/reexportsimages/O rings.jpg"
                   class="w-100" />
                 <a href="#!">
                   <div class="mask">
@@ -383,11 +377,9 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="./index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="./index.html#about">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="./index.html#services">Services</a></li>
             </ul>
           </div>
 
