--- a/index.html
+++ b/index.html
@@ -462,40 +462,46 @@
             <img src="assets/img/ezhotregionalcustomers/Oakwood.jpg" class="img-fluid" alt="">
           </div>
 
+    <details>
+      <summary>Load More</summary>
+      <div class="row">
 
-          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
-            <img src="assets/img/ezhotregionalcustomers/Pantai Hospital.png" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
-            <img src="assets/img/ezhotregionalcustomers/Philea Mines Beach Hotel.png" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
-            <img src="assets/img/ezhotregionalcustomers/Pusat Perubatan Universiti.png" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
-            <img src="assets/img/ezhotregionalcustomers/Qamar.png" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
-            <img src="assets/img/ezhotregionalcustomers/Shattuck St. Mary School.png" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
-            <img src="assets/img/ezhotregionalcustomers/Somerset.png" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
-            <img src="assets/img/ezhotregionalcustomers/Sunway Medical Centre.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
-            <img src="assets/img/ezhotregionalcustomers/Sunway Putra Hotel.png" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
-            <img src="assets/img/ezhotregionalcustomers/Swiss Inn.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
-            <img src="assets/img/ezhotregionalcustomers/The ELS Club.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
-            <img src="assets/img/ezhotregionalcustomers/Tung Shin Hospital.png" class="img-fluid" alt="">
-          </div>
+      <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/ezhotregionalcustomers/Pantai Hospital.png" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/ezhotregionalcustomers/Philea Mines Beach Hotel.png" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/ezhotregionalcustomers/Pusat Perubatan Universiti.png" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/ezhotregionalcustomers/Qamar.png" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/ezhotregionalcustomers/Shattuck St. Mary School.png" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/ezhotregionalcustomers/Somerset.png" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/ezhotregionalcustomers/Sunway Medical Centre.jpg" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/ezhotregionalcustomers/Sunway Putra Hotel.png" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/ezhotregionalcustomers/Swiss Inn.jpg" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/ezhotregionalcustomers/The ELS Club.jpg" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/ezhotregionalcustomers/Tung Shin Hospital.png" class="img-fluid" alt="">
+      </div>
+
+      </div>
+    </details>
           
 
         </div>
