whatsapp chatbot added

--- a/index.html
+++ b/index.html
@@ -1008,6 +1008,8 @@
   </script>
   
   <script src="assets/js/main.js"></script>
+  <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-c46c575f-aa3d-472c-8548-fbfb8ce2ebd8"></div>
 
 </body>
 
