added remaining existing customer

--- a/index.html
+++ b/index.html
@@ -375,9 +375,6 @@
             <img src="assets/img/excitingclints/Bombardier.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
-            <img src="assets/img/excitingclints/Bombardier.jpeg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
             <img src="assets/img/excitingclints/Caltex.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
@@ -401,6 +398,86 @@
           
 
         </div>
+        <details>
+      <summary>  <p class="btn btn-warning">Load More</p> </summary>
+      <div class="row">
+         <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/Healthcare Pharma.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/Hisamitsu.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/Imexpharma.jpeg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/Incepta Pharma.jpeg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/KFC.jpg" class="img-fluid" alt="">
+          </div>
+      
+          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/KYB.jpg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/Lapp Group.jpeg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/Lonza.jpeg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/Medivest Pharma.jpg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/Mundipharma.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/Nanogen.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/Nuvista Pharma.jpeg" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/OJI.jpg" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/Orion Pharma.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/Petronus.jpg" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/Renata Ltd.jpeg" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/Saiver.jpg" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/SK-F Pharma.jpeg" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/Square Pharma.jpeg" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/Unisem.jpg" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
+            <img src="assets/img/excitingclints/White Horse Pharma.png" class="img-fluid" alt="">
+          </div>
+
+      </div>
+    </details>
 
       </div>
 
@@ -463,7 +540,7 @@
           </div>
 
     <details>
-      <summary>Load More</summary>
+      <summary><p class="btn btn-warning">Load More</p></summary>
       <div class="row">
 
       <div class="col-lg-3 col-md-4  d-flex align-items-center justify-content-center ">
