small bug fixes

--- a/export.html
+++ b/export.html
@@ -36,7 +36,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <h1 class="logo">
-        <img src="./assets/img/Logo-removebg-preview.png" alt="" style="height: 100px; width: 100px;"  srcset="">
+        <img src="./assets/img/bloxwich-logo.png" alt="" style="height: 100px; width: 100px;"  srcset="">
       </h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -358,23 +358,12 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
+          <div class="col-lg-4 col-md-6 footer-contact">
             <h3>Bloxwich</h3>
-            <p>
-              Mr Rajendra Landge A/502, <br> Celestial City, Phase 1, <br>
-              Ravet, Pune - 412101 <br>
-              Mob: +91-9049000036
-              <!-- <center>India Office </center>
-              <strong>Phone:</strong> +91 9049000036<br>
-              <strong>Email:</strong> bloxwich.technologies@gmail.com<br>
-              <center>Malaysia Office </center>
-
-              <strong>Phone:</strong> +6012-231 8749 <br>
-              <strong>Email:</strong> paulvannan.bloxwich@gmail.com -->
-            </p>
+            <img src="./assets/img/bloxwich-logo.png"  alt="" style="max-height: 100px;">
           </div>
 
-          <div class="col-lg-2 col-md-6 footer-links">
+          <div class="col-lg-4 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="./index.html">Home</a></li>
@@ -383,7 +372,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <div class="col-lg-4 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="import.html">Product</a></li>
@@ -392,7 +381,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
+          <!-- <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Contact Details</h4>
             <p>
               <center> <b>India Office</b> </center>
@@ -402,7 +391,7 @@
               <center> <b>Malaysia Office</b> </center>
               <strong>Phone:</strong> +6012-231 8749 <br>
               <strong>Email:</strong> paulvannan.bloxwich@gmail.com</p>
-          </div>
+          </div> -->
 
         </div>
       </div>
