changes made in style and design

--- a/import.html
+++ b/import.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Bloxwich </title>
+  <title>Bloxwich Technologies </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -163,7 +163,7 @@
         <div class="row">
 
           <div class="col-lg-4 col-md-6 footer-contact">
-            <h3>Bloxwich</h3>
+            <h3>Bloxwich Technologies</h3>
             <img src="./assets/img/bloxwich-logo.png"  alt="" style="max-height: 100px;">
           </div>
 
@@ -205,7 +205,7 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Bloxwich</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Bloxwich Technologies</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           Designed by <a href="https://DynamicWeb.Tech/">DynamicWebTech</a>
