address changes added

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
               <p style="color: #444444;">We at Bloxwich Technologies are a team of Engineers / Business minded people having more
-                than 25+ years of experience in Electricals & Electronics, Automotive & OffRoad industry.</p>
+                than 25+ years of experience in Electricals & Electronics, Automotive & Off-Road industry.</p>
             <ul>
               <li> Y2016: Acquisition of Bloxwich Lighting Business in Malaysia</li>
               <li>Y2018: Diversified to HVAC industry for retrofits of AHUs in Malaysia </li>
@@ -842,8 +842,8 @@
                   <h3>Registered Office</h3>
                   <p style="text-align: justify;
                   text-justify: inter-word;">
-                    Wisma Rainbow,  NO F-52, Ground Floor, <br>
-                    First Main Road, Anna Nagar East <br>
+                    Wisma Rainbow,  NO F-52, <br> Ground Floor, 
+                    First Main Road, <br> Anna Nagar East <br>
                     Chennai-600102 
                     Tamil Nadu
                   </p>
@@ -857,7 +857,7 @@
                   text-justify: inter-word;">
                     Mr Paulvannan <br>
                     No. 235, Block B1, Leisure Commerce Square
-                    No. 9, Jalan PJS 8/9, 46150 Petaling Jaya
+                    No. 9, Jalan PJS 8/9, <br> 46150 Petaling Jaya
                     Selangor Darul Ehsan, Malaysia <br>
                     Phone: +6012-231 8749 <br>
                     Email: paulvannan.bloxwich@gmail.com
