--- a/index.html
+++ b/index.html
@@ -844,8 +844,7 @@
                   text-justify: inter-word;">
                     Wisma Rainbow,  NO F-52, <br> Ground Floor, 
                     First Main Road, <br> Anna Nagar East <br>
-                    Chennai-600102 
-                    Tamil Nadu
+                    Chennai  , Tamil Nadu, 600102
                   </p>
                 </div>
               </div>
