--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
             <img src="assets/img/ezhotregionalcustomers/Iris.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-3 col-md-4 col-6  d-flex align-items-center justify-content-center ">
-            <img src="assets/img/ezhotregionalcustomers/KIP.png" class="img-fluid" alt="">
+            <img src="assets/img/ezhotregionalcustomers/KIP Hotel logo.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-3 col-md-4 col-6  d-flex align-items-center justify-content-center ">
             <img src="assets/img/ezhotregionalcustomers/Kuala Terengganu Medical Centre.jpg" class="img-fluid" alt="">
@@ -907,7 +907,7 @@
         <div class="row">
 
           <div class="col-lg-4 col-md-6 footer-contact">
-            <h3>Bloxwich</h3>
+            <!-- <h3>Bloxwich</h3> -->
             <img src="./assets/img/bloxwich-logo.png"  alt="" style="max-height: 100px;">
           </div>
 
@@ -921,9 +921,9 @@
           </div>
 
           <div class="col-lg-4 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Our Products</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="import.html">Product</a></li>
+              
               <li><i class="bx bx-chevron-right"></i> <a href="./import.html">Import </a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="./export.html">Export</a></li>
             </ul>
