--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.ico" rel="icon">
+  <link href="assets/img/bloxwich-logo.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -78,7 +78,7 @@
     <div class="container position-relative">
       <h1>Welcome to Bloxwich Technologies </h1>
       <h1>
-        <a href="" class="typewrite" data-period="2000" data-type='[ "A Customized solutions that saves Energy & Money"]'>
+        <a href="" class="typewrite" data-period="2000" data-type='[ "Customized solutions that saves Energy & Money"]'>
           <span class="wrap"></span>
         </a>
       </h1>
@@ -578,7 +578,7 @@
             <div class="member d-flex align-items-start">
               <div class="pic"><img src="./assets/img/team/Rajendra Landge.png" class="img-fluid" alt="" style="height: 100px; width: 100px;" ></div>
               <div class="member-info">
-                <h4>RAJENDRA LANDGE</h4>
+                <h4>Rajendra Landge</h4>
                 <span>Director – Business Development</span>
                 <p></p>
                 <div class="social">
