Final changes -- ab to bacha hua paisa dedo malik

--- a/export.html
+++ b/export.html
@@ -241,7 +241,7 @@
           </div>
 
 
-          <div class="col-lg-4 col-md-12 mb-4">
+          <!-- <div class="col-lg-4 col-md-12 mb-4">
             <div class="card">
               <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light"
                 data-mdb-ripple-color="light">
@@ -343,7 +343,7 @@
               </div>
             </div>
           </div>
-
+ -->
 
           
     
