--- a/index.html
+++ b/index.html
@@ -203,12 +203,12 @@
               <div class="icon">
                 <i class="bx bx-file"></i>
               </div>
-              <h4><a href="">Energy-Saving Devices</a></h4>
+              <h4><a href="">Energy-Saving Products</a></h4>
               <p>We offer energy-saving devices to help you reduce your energy costs and environmental footprint. Our experts can install and maintain these devices to ensure optimal performance.</p>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in"
+          <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in"
             data-aos-delay="300">
             <div class="icon-box iconbox-pink">
               <div class="icon">
@@ -217,7 +217,7 @@
               <h4><a href="">Air Filters</a></h4>
               <p>We offer a range of air filters to meet your filtration needs. Our filters are designed to remove impurities and improve air quality, providing a healthier and more comfortable environment</p>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box iconbox-yellow">
@@ -245,7 +245,7 @@
                 <i class="bx bx-arch"></i>
               </div>
               <h4><a href="">Consultation</a></h4>
-              <p>Our experts can provide consultation services to help you choose the right hardware solutions for your needs. We can assess your requirements and recommend customized solutions to help you achieve your goals.</p>
+              <p>Our experts can provide consultation services to help you choose the right Hardware / Software solutions for your needs. We can assess your requirements and recommend customized solutions to help you achieve your goals.</p>
             </div>
           </div>
 
@@ -557,7 +557,7 @@
 
           <div class="col-lg-6 aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="./assets/img/team/Paulvannan Rajintran.jfif" class="img-fluid" alt="" style="height: 100px; width: 100px;"></div>
+              <div class="pic"><img src="./assets/img/team/WhatsApp Image 2023-05-23 at 3.19.15 PM.jpeg" class="img-fluid" alt="" style="height: 100px; width: 100px;"></div>
               <div class="member-info">
                 <h4>Paulvannan Rajintran</h4>
                 <span>Chief Executive Officer</span>
