patthar lauta do

--- a/import.html
+++ b/import.html
@@ -47,18 +47,17 @@
           <!-- <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li> -->
           <li class="dropdown"><a href="#portfolio"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="./import.html">Import</a></li>
-              <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li> -->
+              <!-- <li><a href="./import.html">Import</a></li> -->
               <li><a href="./export.html">Export</a></li>
-              
+              <li class="dropdown"><a href="#"><span>Other Products</span> <i class="bi bi-chevron-right"></i></a>
+                <ul>
+                  <li><a href="./pages/AHU-RETROFITS,image001,image002/AHU-RETROFITS.html">AHU Retrofits</a></li>
+                  <li><a href="./pages/AHU,image001,image002/AHU.html">AHU</a></li>
+                  <li><a href="./pages/Fan Coil Units,image001,image002/Fan Coil Units.html">Fan Coil Units</a></li>
+                  <li><a href="./pages/Heat Pumps- Heat pumps,image001,image002/Heat Pumps- Heat pumps.html">Heat Pumps</a></li>
+                  <li><a href="./pages/LED-Nexus,image001,image002/LED-Nexus.html">NexusLED</a></li>
+                </ul>
+              </li>
             </ul>
           </li>
         </ul>
