--- a/index.html
+++ b/index.html
@@ -942,10 +942,16 @@
           <div class="col-lg-4 col-md-6 footer-links">
             <h4>Our Products</h4>
             <ul>
-              
-              <li><i class="bx bx-chevron-right"></i> <a href="./import.html">Import </a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="./export.html">Export</a></li>
+              <!-- <li><a href="./import.html">Import</a></li> -->
+                  <li><a href="./export.html">Export</a></li>
+                  <li><a href="./pages/AHU-RETROFITS,image001,image002/AHU-RETROFITS.html">AHU Retrofits</a></li>
+                  <li><a href="./pages/AHU,image001,image002/AHU.html">AHU</a></li>
+                  <li><a href="./pages/Fan Coil Units,image001,image002/Fan Coil Units.html">Fan Coil Units</a></li>
+                  <li><a href="./pages/Heat Pumps- Heat pumps,image001,image002/Heat Pumps- Heat pumps.html">Heat Pumps</a></li>
+                  <li><a href="./pages/LED-Nexus,image001,image002/LED-Nexus.html">NexusLED</a></li>
+                  
             </ul>
+  
           </div>
 
           <!-- <div class="col-lg-4 col-md-6 footer-newsletter">
