--- a/pages/Heat Pumps- Heat pumps,image001,image002/Heat Pumps- Heat pumps.html
+++ b/pages/Heat Pumps- Heat pumps,image001,image002/Heat Pumps- Heat pumps.html
@@ -1,71 +1,88 @@
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=utf-8">
-<meta name=Generator content="Microsoft Word 15 (filtered)">
-<style>
-<!--
- /* Font Definitions */
- @font-face
-	{font-family:"Cambria Math";
-	panose-1:2 4 5 3 5 4 6 3 2 4;}
-@font-face
-	{font-family:Calibri;
-	panose-1:2 15 5 2 2 2 4 3 2 4;}
- /* Style Definitions */
- p.MsoNormal, li.MsoNormal, div.MsoNormal
-	{margin-top:0in;
-	margin-right:0in;
-	margin-bottom:8.0pt;
-	margin-left:0in;
-	line-height:107%;
-	font-size:11.0pt;
-	font-family:"Calibri",sans-serif;}
-.MsoChpDefault
-	{font-family:"Calibri",sans-serif;}
-.MsoPapDefault
-	{margin-bottom:8.0pt;
-	line-height:107%;}
-@page WordSection1
-	{size:595.3pt 841.9pt;
-	margin:1.0in 1.0in 1.0in 1.0in;}
-div.WordSection1
-	{page:WordSection1;}
--->
-</style>
+	<meta http-equiv=Content-Type content="text/html; charset=utf-8">
+	<meta name=Generator content="Microsoft Word 15 (filtered)">
+	<style>
+		<!--
+		/* Font Definitions */
+		@font-face {
+			font-family: "Cambria Math";
+			panose-1: 2 4 5 3 5 4 6 3 2 4;
+		}
+
+		@font-face {
+			font-family: Calibri;
+			panose-1: 2 15 5 2 2 2 4 3 2 4;
+		}
+
+		/* Style Definitions */
+		p.MsoNormal,
+		li.MsoNormal,
+		div.MsoNormal {
+			margin-top: 0in;
+			margin-right: 0in;
+			margin-bottom: 8.0pt;
+			margin-left: 0in;
+			line-height: 107%;
+			font-size: 11.0pt;
+			font-family: "Calibri", sans-serif;
+		}
+
+		.MsoChpDefault {
+			font-family: "Calibri", sans-serif;
+		}
+
+		.MsoPapDefault {
+			margin-bottom: 8.0pt;
+			line-height: 107%;
+		}
+
+		@page WordSection1 {
+			size: 595.3pt 841.9pt;
+			margin: 1.0in 1.0in 1.0in 1.0in;
+		}
+
+		div.WordSection1 {
+			page: WordSection1;
+		}
+		-->
+	</style>
 
 </head>
 
 <body lang=EN-US style='word-wrap:break-word'>
 
-<div class=WordSection1>
+	<center>
+		<div class=WordSection1>
 
 <p class=MsoNormal><span lang=EN-MY><img width=602 height=343 id="Picture 1"
-src="Heat%20Pumps-%20Heat%20pumps_files/image001.jpg"></span></p>
+			src="Heat%20Pumps-%20Heat%20pumps_files/image001.jpg"></span></p>
 
 <p class=MsoNormal><span lang=EN-MY>&nbsp;</span></p>
 
 <p class=MsoNormal><span lang=EN-MY><img width=602 height=443 id="Picture 2"
-src="Heat%20Pumps-%20Heat%20pumps_files/image002.jpg"></span></p>
+			src="Heat%20Pumps-%20Heat%20pumps_files/image002.jpg"></span></p>
 
 <p class=MsoNormal><span lang=EN-MY>&nbsp;</span></p>
 
 <p class=MsoNormal><span lang=EN-MY><img width=601 height=458 id="Picture 3"
-src="Heat%20Pumps-%20Heat%20pumps_files/image003.jpg"></span></p>
+			src="Heat%20Pumps-%20Heat%20pumps_files/image003.jpg"></span></p>
 
 <p class=MsoNormal><span lang=EN-MY>&nbsp;</span></p>
 
 <p class=MsoNormal><span lang=EN-MY><img width=602 height=448 id="Picture 4"
-src="Heat%20Pumps-%20Heat%20pumps_files/image004.jpg"></span></p>
+			src="Heat%20Pumps-%20Heat%20pumps_files/image004.jpg"></span></p>
 
 <p class=MsoNormal><span lang=EN-MY>&nbsp;</span></p>
 
 <p class=MsoNormal><span lang=EN-MY><img width=602 height=440 id="Picture 5"
-src="Heat%20Pumps-%20Heat%20pumps_files/image005.jpg"></span></p>
+			src="Heat%20Pumps-%20Heat%20pumps_files/image005.jpg"></span></p>
 
 <p class=MsoNormal><span lang=EN-MY>&nbsp;</span></p>
 
 </div>
+	</center>
 
 </body>
 
