--- a/index.html
+++ b/index.html
@@ -53,17 +53,15 @@
           <li class="dropdown"><a href="#portfolio"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <!-- <li><a href="./import.html">Import</a></li> -->
-              <li><a href="./export.html">Export</a></li>
               <li><a href="./export.html"><b>Export</b></a></li>
               <li class="dropdown"><a href="#"><span><b>Import</b></span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="./pages/AHU-RETROFITS,image001,image002/AHU-RETROFITS.html">AHU Retrofits</a></li>
-                  <li><a href="./pages/AHU,image001,image002/AHU.html">AHU</a></li>
-                  <li><a href="./pages/Fan Coil Units,image001,image002/Fan Coil Units.html">Fan Coil Units</a></li>
-                  <li><a href="./pages/Heat Pumps- Heat pumps,image001,image002/Heat Pumps- Heat pumps.html">Heat Pumps</a></li>
-                  <li><a href="./pages/LED-Nexus,image001,image002/LED-Nexus.html">NexusLED</a></li>
-                  <li><a href="./pages/InstrumentsAccessories/Instruments & Accessories.html">Instruments & Accessories</a></li>
-                </ul>
+                  <li><a href="./pages/AHU,image001,image002/AHU.html" target="_blank">AHU</a></li>
+                  <li><a href="./pages/AHU-RETROFITS,image001,image002/AHURETROFITS.html" target="_blank">AHU Retrofits</a></li>
+                  <li><a href="./pages/Fan Coil Units,image001,image002/Fan Coil Units.html" target="_blank">Fan Coil Units</a></li>
+                  <li><a href="./pages/Heat Pumps- Heat pumps,image001,image002/Heat Pumps- Heat pumps.html" target="_blank">Heat Pumps</a></li>
+                  <li><a href="./pages/LED-Nexus,image001,image002/LED-Nexus.html" target="_blank">NexusLED</a></li>
+                  <li><a href="./pages/InstrumentsAccessories/Instruments & Accessories.html" target="_blank">Instruments & Accessories</a></li>
+              </li>
               </li>
             </ul>
           </li>
@@ -233,7 +231,7 @@
             </div>
           </div>
 
-          <a href="./pages/AHU-RETROFITS,image001,image002/AHU-RETROFITS.html">
+          <a href="./pages/AHU-RETROFITS,image001,image002/AHURETROFITS.html">
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
               <div class="icon-box iconbox-red">
                 <div class="icon">
@@ -246,7 +244,7 @@
           </a>
 
             <diav class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
-              <a href="./pages/AHU-RETROFITS,image001,image002/AHU-RETROFITS.html">
+              <a href="./pages/AHU-RETROFITS,image001,image002/AHURETROFITS.html">
                 <div class="icon-box iconbox-teal">
                   <div class="icon">
                     <i class="bx bx-arch"></i>
@@ -451,6 +449,40 @@
         
       </div>
 
+    </div>
+
+    <div class="container">
+      <div class="section-title">
+        <p>
+          AHU Retrofits Clients        
+        </p>
+      </div>
+
+    </div>
+
+    <div class="row">
+      <div class="col-lg-3 col-md-4 col-6  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/excitingclints/AHU  Retrofits Clints/Breach Candy Hospital Trust.png" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4 col-6  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/excitingclints/AHU  Retrofits Clints/Dr. Reddy's.png" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4 col-6  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/excitingclints/AHU  Retrofits Clints/Fibertex.png" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4 col-6  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/excitingclints/AHU  Retrofits Clints/GE.jpg" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4 col-6  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/excitingclints/AHU  Retrofits Clints/Infosys.png" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4 col-6  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/excitingclints/AHU  Retrofits Clints/ITC.png" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4 col-6  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/excitingclints/AHU  Retrofits Clints/Unisem.jpg" class="img-fluid" alt="">
+      </div>
+      
     </div>
 
 
@@ -948,7 +980,7 @@
                 <li><a href="./export.html"><b>Export</b></a></li>
               <li class=""><a href="#"><span><b>Import</b></span> <i class="bi bi-chevron-right"></i></a>
                   <li><a href="./pages/AHU,image001,image002/AHU.html">AHU</a></li>
-                  <li><a href="./pages/AHU-RETROFITS,image001,image002/AHU-RETROFITS.html">AHU Retrofits</a></li>
+                  <li><a href="./pages/AHU-RETROFITS,image001,image002/AHURETROFITS.html">AHU Retrofits</a></li>
                   <li><a href="./pages/Fan Coil Units,image001,image002/Fan Coil Units.html">Fan Coil Units</a></li>
                   <li><a href="./pages/Heat Pumps- Heat pumps,image001,image002/Heat Pumps- Heat pumps.html">Heat Pumps</a></li>
                   <li><a href="./pages/LED-Nexus,image001,image002/LED-Nexus.html">NexusLED</a></li>
