--- a/clients.html
+++ b/clients.html
@@ -51,12 +51,12 @@
               <li><a href="./export.html"><b>Export</b></a></li>
               <li class="dropdown"><a href="#"><span><b>Import</b></span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li><a href="./pages/AHU-RETROFITS,image001,image002/AHU-RETROFITS.html">AHU Retrofits</a></li>
-                  <li><a href="./pages/AHU,image001,image002/AHU.html">AHU</a></li>
-                  <li><a href="./pages/Fan Coil Units,image001,image002/Fan Coil Units.html">Fan Coil Units</a></li>
-                  <li><a href="./pages/Heat Pumps- Heat pumps,image001,image002/Heat Pumps- Heat pumps.html">Heat Pumps</a></li>
-                  <li><a href="./pages/LED-Nexus,image001,image002/LED-Nexus.html">NexusLED</a></li>
-                  <li><a href="./pages/InstrumentsAccessories/Instruments & Accessories.html">Instruments & Accessories</a></li>
+                  <li><a href="./pages/AHU-RETROFITS,image001,image002/AHURETROFITS.html" target="_blank">AHU Retrofits</a></li>
+                  <li><a href="./pages/AHU,image001,image002/AHU.html" target="_blank">AHU</a></li>
+                  <li><a href="./pages/Fan Coil Units,image001,image002/Fan Coil Units.html" target="_blank">Fan Coil Units</a></li>
+                  <li><a href="./pages/Heat Pumps- Heat pumps,image001,image002/Heat Pumps- Heat pumps.html" target="_blank">Heat Pumps</a></li>
+                  <li><a href="./pages/LED-Nexus,image001,image002/LED-Nexus.html" target="_blank">NexusLED</a></li>
+                  <li><a href="./pages/InstrumentsAccessories/Instruments & Accessories.html" target="_blank">Instruments & Accessories</a></li>
                 </ul>
               </li>
             </ul>
@@ -215,7 +215,40 @@
       </div>
 
     </div>
+ 
+    <div class="container">
+      <div class="section-title">
+        <p>
+          AHU Retrofits Clients        
+        </p>
+      </div>
 
+    </div>
+
+    <div class="row">
+      <div class="col-lg-3 col-md-4 col-6  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/excitingclints/AHU  Retrofits Clints/Breach Candy Hospital Trust.png" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4 col-6  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/excitingclints/AHU  Retrofits Clints/Dr. Reddy's.png" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4 col-6  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/excitingclints/AHU  Retrofits Clints/Fibertex.png" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4 col-6  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/excitingclints/AHU  Retrofits Clints/GE.jpg" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4 col-6  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/excitingclints/AHU  Retrofits Clints/Infosys.png" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4 col-6  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/excitingclints/AHU  Retrofits Clints/ITC.png" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-3 col-md-4 col-6  d-flex align-items-center justify-content-center ">
+        <img src="assets/img/excitingclints/AHU  Retrofits Clints/Unisem.jpg" class="img-fluid" alt="">
+      </div>
+      
+    </div>
 
 
       <!-- Existing clients End -->
@@ -353,12 +386,12 @@
               <!-- <li><a href="./import.html">Import</a></li> -->
                 <li><a href="./export.html"><b>Export</b></a></li>
               <li class=""><a href="#"><span><b>Import</b></span> <i class="bi bi-chevron-right"></i></a>
-                  <li><a href="./pages/AHU,image001,image002/AHU.html">AHU</a></li>
-                  <li><a href="./pages/AHU-RETROFITS,image001,image002/AHU-RETROFITS.html">AHU Retrofits</a></li>
-                  <li><a href="./pages/Fan Coil Units,image001,image002/Fan Coil Units.html">Fan Coil Units</a></li>
-                  <li><a href="./pages/Heat Pumps- Heat pumps,image001,image002/Heat Pumps- Heat pumps.html">Heat Pumps</a></li>
-                  <li><a href="./pages/LED-Nexus,image001,image002/LED-Nexus.html">NexusLED</a></li>
-                  <li><a href="./pages/InstrumentsAccessories/Instruments & Accessories.html">Instruments & Accessories</a></li>
+                  <li><a href="./pages/AHU,image001,image002/AHU.html" target="_blank">AHU</a></li>
+                  <li><a href="./pages/AHU-RETROFITS,image001,image002/AHURETROFITS.html" target="_blank">AHU Retrofits</a></li>
+                  <li><a href="./pages/Fan Coil Units,image001,image002/Fan Coil Units.html" target="_blank">Fan Coil Units</a></li>
+                  <li><a href="./pages/Heat Pumps- Heat pumps,image001,image002/Heat Pumps- Heat pumps.html" target="_blank">Heat Pumps</a></li>
+                  <li><a href="./pages/LED-Nexus,image001,image002/LED-Nexus.html" target="_blank">NexusLED</a></li>
+                  <li><a href="./pages/InstrumentsAccessories/Instruments & Accessories.html" target="_blank">Instruments & Accessories</a></li>
               </li>
                   
             </ul>
