AHU doc changed

--- a/pages/AHU,image001,image002/AHU.html
+++ b/pages/AHU,image001,image002/AHU.html
@@ -56,34 +56,40 @@
 	<center>
 		<div class=WordSection1>
 
-<p class=MsoNormal><span lang=EN-MY>&nbsp;</span></p>
+			<p class=MsoNormal><span lang=EN-MY>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-MY><img width=601 height=335 id="Picture 1"
-			src="AHU_files/image001.jpg"></span></p>
+			<p class=MsoNormal><span lang=EN-MY><img width=601 height=335 src="AHU_files/image001.jpg"></span></p>
 
-<p class=MsoNormal><span lang=EN-MY><img width=601 height=337 id="Picture 6"
-			src="AHU_files/image002.jpg"></span></p>
+			<p class=MsoNormal><span lang=EN-MY><img width=601 height=337 id="Picture 6"
+						src="AHU_files/image002.jpg"></span></p>
 
-<p class=MsoNormal><span lang=EN-MY><img width=601 height=336 id="Picture 2"
-			src="AHU_files/image003.jpg"></span></p>
+			<p class=MsoNormal><span lang=EN-MY><img width=601 height=336 src="AHU_files/image003.jpg"></span></p>
 
-<p class=MsoNormal><span lang=EN-MY><img width=601 height=338 id="Picture 3"
-			src="AHU_files/image004.jpg"></span></p>
+			<p class=MsoNormal><span lang=EN-MY><img width=601 height=338 src="AHU_files/image004.jpg"></span></p>
 
-<p class=MsoNormal><span lang=EN-MY><img width=601 height=338 id="Picture 4"
-			src="AHU_files/image005.jpg"></span></p>
+			<p class=MsoNormal><span lang=EN-MY><img width=601 height=338 src="AHU_files/image005.jpg"></span></p>
 
-<p class=MsoNormal><span lang=EN-MY>&nbsp;</span></p>
+			<p class=MsoNormal><span lang=EN-MY><img width=602 height=340 id="Picture 5"
+						src="AHU_files/image006.jpg"></span></p>
 
-<p class=MsoNormal><span lang=EN-MY><img width=602 height=340 id="Picture 5"
-			src="AHU_files/image006.jpg"></span></p>
+			<p class=MsoNormal><span lang=EN-MY><img width=601 height=339 id="Picture 7"
+						src="AHU_files/image007.jpg"></span></p>
 
-<p class=MsoNormal><span lang=EN-MY>&nbsp;</span></p>
+			<p class=MsoNormal><span lang=EN-MY><img width=602 height=350 id="Picture 1"
+						src="AHU_files/image008.jpg"></span></p>
 
-<p class=MsoNormal><span lang=EN-MY><img width=601 height=339 id="Picture 7"
-			src="AHU_files/image007.jpg"></span></p>
+			<p class=MsoNormal><span lang=EN-MY>&nbsp;</span></p>
 
-</div>	
+			<p class=MsoNormal><span lang=EN-MY><img width=601 height=340 id="Picture 2"
+						src="AHU_files/image009.jpg"></span></p>
+
+			<p class=MsoNormal><span lang=EN-MY><img width=605 height=369 id="Picture 3"
+						src="AHU_files/image010.jpg"></span></p>
+
+			<p class=MsoNormal><span lang=EN-MY><img width=607 height=337 id="Picture 4"
+						src="AHU_files/image011.jpg"></span></p>
+
+		</div>
 	</center>
 
 </body>
